Switched from npm to yarn for package management.

--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build":
-      "webpack -d && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp -R src/images dist/images && cp src/manifest.json dist/manifest.json && webpack-dev-server --content-base dist/ --inline --hot",
-    "build:prod":
-      "webpack -p && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp -R src/images dist/images && cp src/manifest.json dist/manifest.json"
+    "build": "webpack -d && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp -R src/images dist/images && cp src/manifest.json dist/manifest.json && webpack-dev-server --content-base dist/ --inline --hot",
+    "build:prod": "webpack -p && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp -R src/images dist/images && cp src/manifest.json dist/manifest.json"
   },
   "author": "Ardelean Calin (calin.ardelean@ro.bosch.com)",
   "license": "ISC",
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "preact": "^8.2.7",
