Added loading page with "funny" messages

--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build":
-      "webpack -d && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp src/firebase-messaging-sw.js dist/firebase-messaging-sw.js && cp src/manifest.json dist/manifest.json && webpack-dev-server --content-base dist/ --inline --hot",
-    "build:prod":
-      "webpack -p && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp src/firebase-messaging-sw.js dist/firebase-messaging-sw.js && cp src/manifest.json dist/manifest.json"
+    "build": "webpack -d && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp src/firebase-messaging-sw.js dist/firebase-messaging-sw.js && cp src/manifest.json dist/manifest.json && webpack-dev-server --content-base dist/ --inline --hot",
+    "build:prod": "webpack -p && cp src/index.html dist/index.html && cp src/service-worker.js dist/service-worker.js && cp src/firebase-messaging-sw.js dist/firebase-messaging-sw.js && cp src/manifest.json dist/manifest.json"
   },
   "author": "Ardelean Calin (calin.ardelean@ro.bosch.com)",
   "license": "ISC",
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^4.8.2",
+    "funnies": "^2.0.0",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
