I really don't want a smart commit message

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "University App",
-  "short_name": "University App",
+  "name": "Aplicatie Master SSEA",
+  "short_name": "SSEA",
   "theme_color": "#3f51b5",
   "background_color": "#7f8c8d",
   "display": "standalone",
